--- a/analysis4camp_notebook.ipynb
+++ b/analysis4camp_notebook.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMG_Path_1MW2  = \"/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/1MW2_Images/\"\n",
-    "ROOT_FILES_1MW2 = \"/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/\"\n",
+    "IMG_Path_1MW2  = \"/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/Images/1MW2/\"\n",
+    "ROOT_FILES_1MW2 = \"/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/1MW2/\"\n",
     "def rf(file_name):\n",
     "    return f\"{ROOT_FILES_1MW2}{file_name}.root\"\n",
     "\n",
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,25 +257,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'20250606_1501_1MW2_400nm_350V_reps3_zscan_baseline_substrated': {'ok': True,\n",
-       "  'root_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1501_1MW2_400nm_350V_reps3_zscan_baseline_substrated.root',\n",
+       "  'root_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/1MW2/20250606_1501_1MW2_400nm_350V_reps3_zscan_baseline_substrated.root',\n",
        "  'raw_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RawData/20250606_1501_1MW2_400nm_350V_reps3_zscan_baseline_substrated',\n",
        "  'n_rows': 330,\n",
        "  'n_samples': 4000},\n",
        " '20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated': {'ok': True,\n",
-       "  'root_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root',\n",
+       "  'root_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/1MW2/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root',\n",
        "  'raw_path': '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RawData/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated',\n",
        "  'n_rows': 330,\n",
        "  'n_samples': 4000}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -347,11 +356,11 @@
     {
      "data": {
       "text/plain": [
-       "('/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/1MW2_Images/t_vs_WFsRaw.png',\n",
-       " '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/1MW2_Images/t_vs_WFsRaw.html')"
+       "('/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/Images/1MW2/t_vs_WFsRaw.png',\n",
+       " '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/Images/1MW2/t_vs_WFsRaw.html')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,182 +393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Contenido de /home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root ===\n",
-      "\n",
-      "--- TTree: Base (estructura) ---\n",
-      "\n",
-      "--- TTree: Base (valores, entry 0) ---\n",
-      "dataPath = '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RawData/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated'\n",
-      "\n",
-      "--- TTree: Pars (estructura) ---\n",
-      "\n",
-      "--- TTree: Pars (valores, entry 0) ---\n",
-      "dt = 0.05000000074505806\n",
-      "aLPower = 1.0\n",
-      "\n",
-      "--- TTree: Raw (estructura) ---\n",
-      "\n",
-      "--- TTree: Raw (valores, entry 0) ---\n",
-      "name = '20250606_1516_1mw2_400nm_450v_reps3_zscan_baseline_substrated'\n",
-      "timestamp = '20250606_1516'\n",
-      "voltage_v = 450\n",
-      "wavelength_nm = 400\n",
-      "reps = 3\n",
-      "scan_type = 'zscan'\n",
-      "dataPath = '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RawData/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated'\n",
-      "rootPath = '/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root'\n",
-      "do_flipZ = True\n",
-      "do_invertSignal = False\n",
-      "z = vector[330]\n",
-      "x = vector[330]\n",
-      "y = vector[330]\n",
-      "LP = vector[330]\n",
-      "WFsRaw = vector[330][4000]\n",
-      "n_events = 330\n",
-      "n_samples = 4000\n",
-      "events = vector[330]\n",
-      "t = vector[4000]\n",
-      "aTBL = 25\n",
-      "aTLeft = 26.549999237060547\n",
-      "aTRight = 44.0\n",
-      "TFile**\t\t/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root\t\n",
-      " TFile*\t\t/home/cquintana/Software/Docker/TPA_TCT_root/SiC4thCamp/RootFiles/20250606_1516_1MW2_400nm_450V_reps3_zscan_baseline_substrated.root\t\n",
-      "  KEY: TTree\tBase;1\tAnalysis base tree (single entry)\n",
-      "  KEY: TTree\tPars;1\tAnalysis base tree (single entry)\n",
-      "  KEY: TTree\tRaw;1\tAnalysis base tree (single entry)\n",
-      "******************************************************************************\n",
-      "*Tree    :Base      : Analysis base tree (single entry)                      *\n",
-      "*Entries :        1 : Total =            1161 bytes  File  Size =        649 *\n",
-      "*        :          : Tree compression factor =   1.00                       *\n",
-      "******************************************************************************\n",
-      "*Br    0 :dataPath  : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        714 bytes  File Size  =        212 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "******************************************************************************\n",
-      "*Tree    :Pars      : Analysis base tree (single entry)                      *\n",
-      "*Entries :        1 : Total =            1517 bytes  File  Size =        658 *\n",
-      "*        :          : Tree compression factor =   1.00                       *\n",
-      "******************************************************************************\n",
-      "*Br    0 :dt        : dt/F                                                   *\n",
-      "*Entries :        1 : Total  Size=        546 bytes  File Size  =         73 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    1 :aLPower   : aLPower/F                                              *\n",
-      "*Entries :        1 : Total  Size=        571 bytes  File Size  =         78 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "******************************************************************************\n",
-      "*Tree    :Raw       : Analysis base tree (single entry)                      *\n",
-      "*Entries :        1 : Total =        10620597 bytes  File  Size =    2510003 *\n",
-      "*        :          : Tree compression factor =   4.23                       *\n",
-      "******************************************************************************\n",
-      "*Br    0 :name      : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        629 bytes  File Size  =        144 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    1 :timestamp : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        606 bytes  File Size  =        101 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    2 :voltage_v : voltage_v/I                                            *\n",
-      "*Entries :        1 : Total  Size=        580 bytes  File Size  =         79 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    3 :wavelength_nm : wavelength_nm/I                                    *\n",
-      "*Entries :        1 : Total  Size=        600 bytes  File Size  =         83 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    4 :reps      : reps/I                                                 *\n",
-      "*Entries :        1 : Total  Size=        555 bytes  File Size  =         74 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    5 :scan_type : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        598 bytes  File Size  =         93 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    6 :dataPath  : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        713 bytes  File Size  =        212 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    7 :rootPath  : string                                                 *\n",
-      "*Entries :        1 : Total  Size=        720 bytes  File Size  =        219 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    8 :do_flipZ  : do_flipZ/O                                             *\n",
-      "*Entries :        1 : Total  Size=        566 bytes  File Size  =         75 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br    9 :do_invertSignal : do_invertSignal/O                                *\n",
-      "*Entries :        1 : Total  Size=        601 bytes  File Size  =         82 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br   10 :z         : vector<double>                                         *\n",
-      "*Entries :        1 : Total  Size=       3202 bytes  File Size  =        372 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   7.34     *\n",
-      "*............................................................................*\n",
-      "*Br   11 :x         : vector<double>                                         *\n",
-      "*Entries :        1 : Total  Size=       3202 bytes  File Size  =        128 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=  21.32     *\n",
-      "*............................................................................*\n",
-      "*Br   12 :y         : vector<double>                                         *\n",
-      "*Entries :        1 : Total  Size=       3202 bytes  File Size  =        128 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=  21.32     *\n",
-      "*............................................................................*\n",
-      "*Br   13 :LP        : vector<double>                                         *\n",
-      "*Entries :        1 : Total  Size=       3207 bytes  File Size  =       2479 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.10     *\n",
-      "*............................................................................*\n",
-      "*Br   14 :WFsRaw    : vector<vector<double> >                                *\n",
-      "*Entries :        1 : Total  Size=   10561907 bytes  File Size  =    2484687 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   4.25     *\n",
-      "*............................................................................*\n",
-      "*Br   15 :n_events  : n_events/I                                             *\n",
-      "*Entries :        1 : Total  Size=        575 bytes  File Size  =         78 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br   16 :n_samples : n_samples/I                                            *\n",
-      "*Entries :        1 : Total  Size=        580 bytes  File Size  =         79 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br   17 :events    : vector<Long64_t>                                       *\n",
-      "*Entries :        1 : Total  Size=       3227 bytes  File Size  =        683 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   4.00     *\n",
-      "*............................................................................*\n",
-      "*Br   18 :t         : vector<double>                                         *\n",
-      "*Entries :        1 : Total  Size=      32562 bytes  File Size  =      17780 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.80     *\n",
-      "*............................................................................*\n",
-      "*Br   19 :aTBL      : aTBL/I                                                 *\n",
-      "*Entries :        1 : Total  Size=        555 bytes  File Size  =         74 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br   20 :aTLeft    : aTLeft/F                                               *\n",
-      "*Entries :        1 : Total  Size=        565 bytes  File Size  =         76 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n",
-      "*Br   21 :aTRight   : aTRight/F                                              *\n",
-      "*Entries :        1 : Total  Size=        570 bytes  File Size  =         77 *\n",
-      "*Baskets :        1 : Basket Size=      32000 bytes  Compression=   1.00     *\n",
-      "*............................................................................*\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ls_rootfile(filenames[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +410,7 @@
      "evalue": "invalid syntax (1336123613.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    _BLLevel =\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[17], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    _BLLevel =\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
